# engineVulkanRayTraicing

./: .gitignore  CMakeLists.txt  README.md  run.bat
docs/: Doxyfile
libs/imgui/: imgui_impl_glfw.cpp
libs/tinyobjloader/: tiny_obj_loader.cpp  tiny_obj_loader.h
src/: main.cpp  world.cpp  world.h
src/Material/: material.cpp  material.h  onb.cpp  onb.h  pdf.cpp  pdf.h
src/Rendering/: camera.cpp  camera.h  frameAccumulation.cpp  frameAccumulation.h  renderGPU.cpp  renderGPU.h  tracer.cpp  tracer.h
src/Sample/: sampler.cpp  sampler.h
src/Shape/: mesh.cpp  mesh.h  obj_reader.cpp  obj_reader.h  obj_shape.cpp  obj_shape.h  shape.cpp  shape.h  shape_list.cpp  shape_list.h  triangle.cpp  triangle.h
src/Texture/: texture.cpp  texture.h
src/UI/: UI.cpp  UI.h  UI_guizmo.cpp  UI_guizmo.h  imgui.ini  object.cpp  object.h  png_saver.cpp  png_saver.h  save.json  save_loader.cpp  save_loader.h
src/Utility/: color.cpp  color.h  img_loader.cpp  img_loader.h  integral.cpp  interval.cpp  interval.h  ray.cpp  ray.h  util.h  vec3.cpp  vec3.h
src/VulkanWrapper/: accelerationStructure.cpp  accelerationStructure.h  buffer.cpp  buffer.h  descriptor.cpp  descriptor.h  device.cpp  device.h  display.cpp  display.h  instance.cpp  instance.h  physicalDevice.cpp  physicalDevice.h  physicalDevicePropriete.cpp  physicalDevicePropriete.h  pipeline.cpp  pipeline.h  queueFamily.cpp  queueFamily.h  shader.cpp  shader.h  surface.cpp  surface.h  swapChainSupportDetail.cpp  swapChainSupportDetail.h  vkRessource.cpp  vkRessource.h
src/shader/: ambientOcclusion.rchit  closesthit.rchit  compile.bat  frameAccumulation.comp  generatorRandom.glsl  miss.rmiss  raygen.rgen  shadow.rmiss  struct.glsl
